force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Depl_Pkg__c/cgc_sync__Sync_Mobile_App_Depl_Pkg__c.object-meta.xml
<CustomObject>
    <description>Deployment packages containing the App Runtime Artifacts for the mobile app.</description>
    <label>Deployment Package</label>
    <nameField>
        <displayFormat>SMADP-{000000}</displayFormat>
        <label>Package Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>