force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Depl_Pkg__c/fields/cgc_sync__AggregatedState__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__AggregatedState__c</fullName>
    <description>Displays the deployment package state. Possible values are:
        Initial
        Revoked
        Scheduled
        Published
        Published (partially)</description>
    <formula>IF(cgc_sync__Revoked__c = True, &quot;Revoked&quot;,     
				IF(cgc_sync__Assignment_to_All__c + cgc_sync__Assignment_to_User__c == 0, &apos;Initial&apos;, 
				        IF(cgc_sync__MinPublishingDate__c &gt; NOW() &amp;&amp; cgc_sync__MaxPublishingDate__c &gt; NOW(), &apos;Scheduled&apos;, 
            IF(cgc_sync__MinPublishingDate__c &lt;= NOW() &amp;&amp; cgc_sync__MaxPublishingDate__c &lt;= NOW(), &apos;Published&apos;, &apos;Published (partially)&apos;)																											
        	)
				)
	)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State</label>
    <type>Text</type>
</CustomField>