force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Depl_Pkg__c/fields/cgc_sync__Assignment__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Assignment__c</fullName>
    <description>Display assignment type and number of assignments per assignment type as csv.</description>
    <formula>If( cgc_sync__Assignment_to_All__c = 0 &amp;&amp; cgc_sync__Assignment_to_User__c = 0, &apos;Not assigned&apos;, 
If( cgc_sync__Assignment_to_All__c &gt; 0, &apos;All&apos;, &apos;&apos;) &amp;
If( cgc_sync__Assignment_to_All__c &gt; 0 &amp;&amp; cgc_sync__Assignment_to_User__c &gt; 0, &apos;, &apos;, &apos;&apos;) &amp;
If( cgc_sync__Assignment_to_User__c &gt; 0, &apos;User(&apos; &amp; Text(cgc_sync__Assignment_to_User__c) &amp; &apos;)&apos;, &apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assignment</label>
    <type>Text</type>
</CustomField>