force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Depl_Pkg__c/fields/cgc_sync__Assignment_to_User__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Assignment_to_User__c</fullName>
    <description>Deployment package can be downloaded by a specific user.</description>
    <label>Assignment to User</label>
    <summaryFilterItems>
        <field>cgc_sync__Sync_Mobile_App_Depl_Pkg_As__c.cgc_sync__Assignment_Type__c</field>
        <operation>equals</operation>
        <value>User</value>
    </summaryFilterItems>
    <summaryForeignKey>cgc_sync__Sync_Mobile_App_Depl_Pkg_As__c.cgc_sync__Sync_Mobile_App_Depl_Pkg__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>