force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Depl_Pkg__c/fields/cgc_sync__Deployment_Type__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Deployment_Type__c</fullName>
    <label>Deployment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Complete RTA</fullName>
                <default>true</default>
                <label>Complete RTA</label>
            </value>
            <value>
                <fullName>Delta RTA</fullName>
            </value>
            <value>
                <fullName>Full</fullName>
            </value>
            <value>
                <fullName>Pictures</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>