force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Depl_Pkg__c/fields/cgc_sync__Description__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Description__c</fullName>
    <description>Description for Deployment Mobility Package</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>