force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Depl_Pkg__c/fields/cgc_sync__Installation_Deadline__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Installation_Deadline__c</fullName>
    <description>The date time when this package must be installed by.</description>
    <inlineHelpText>The date time when this package must be installed by.</inlineHelpText>
    <label>Installation Deadline</label>
    <type>DateTime</type>
</CustomField>