force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Depl_Pkg__c/fields/cgc_sync__MaxPublishingDate__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__MaxPublishingDate__c</fullName>
    <description>Date and time by when this package must be published.</description>
    <label>Last Publishing Date</label>
    <summarizedField>cgc_sync__Sync_Mobile_App_Depl_Pkg_As__c.cgc_sync__Publishing_Date__c</summarizedField>
    <summaryForeignKey>cgc_sync__Sync_Mobile_App_Depl_Pkg_As__c.cgc_sync__Sync_Mobile_App_Depl_Pkg__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>