force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Depl_Pkg__c/fields/cgc_sync__Name__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Name__c</fullName>
    <description>Name of Deployment Mobility Package</description>
    <label>Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>