force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Depl_Pkg__c/fields/cgc_sync__Publish_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Publish_Date_Time__c</fullName>
    <description>The date time when this package will be made available to client devices.</description>
    <inlineHelpText>The date time when this package will be made available to client devices.</inlineHelpText>
    <label>Published At</label>
    <type>DateTime</type>
</CustomField>