force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Depl_Pkg__c/fields/cgc_sync__Registration_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Registration_Date_Time__c</fullName>
    <description>Timestamp when the deployment package record was created.</description>
    <label>Registration Date Time</label>
    <type>DateTime</type>
</CustomField>