force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Depl_Pkg__c/fields/cgc_sync__Registration_User__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Registration_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who registered the package.</description>
    <label>Registration User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deployment_Packages</relationshipName>
    <type>Lookup</type>
</CustomField>