force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Depl_Pkg__c/fields/cgc_sync__Revoked__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Revoked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether a Deployment Mobility Packages is revoked or not. A revoked Deployment Mobility Packages is not available for download any longer</description>
    <label>Revoked</label>
    <type>Checkbox</type>
</CustomField>