force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Depl_Pkg__c/fields/cgc_sync__Version__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Version__c</fullName>
    <description>Version of the deployment package.</description>
    <label>Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>