force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Depl_Pkg__c/recordTypes/cgc_sync__Deployment_Package_Standard.recordType-meta.xml
<RecordType>
    <fullName>cgc_sync__Deployment_Package_Standard</fullName>
    <active>true</active>
    <description>Standard record type for Deployment Package</description>
    <label>Deployment Package Standard</label>
</RecordType>