force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Depl_Pkg__c/listViews/cgc_sync__All.listView-meta.xml
<ListView>
    <fullName>cgc_sync__All</fullName>
    <columns>NAME</columns>
    <columns>cgc_sync__Name__c</columns>
    <columns>cgc_sync__Description__c</columns>
    <columns>cgc_sync__Assignment__c</columns>
    <columns>cgc_sync__AggregatedState__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>